<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="169dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_action_userregister" />



        <EditText
            android:id="@+id/etNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"></EditText>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"></EditText>


        <EditText
            android:id="@+id/etTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefono"
            android:inputType="number"></EditText>

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"></EditText>

        <EditText
            android:id="@+id/etPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RepPassword"
            android:inputType="textPassword"></EditText>

        <RadioGroup
            android:id="@+id/radioG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/Hombre"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sexo"
                android:textColor="@color/seagreen"></TextView>

            <RadioButton
                android:id="@+id/Hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Hombre" />

            <RadioButton
                android:id="@+id/Mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Mujer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hobby"
                android:textColor="@color/seagreen"></TextView>

            <CheckBox
                android:id="@+id/Hobby1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Deporte" />

            <CheckBox
                android:id="@+id/Hobby2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pasear" />

            <CheckBox
                android:id="@+id/Hobby3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Leer" />

            <CheckBox
                android:id="@+id/Hobby4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dormir" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/FechaNacimiento"
            android:textColor="@color/seagreen"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CiudadNacimiento"
                android:textColor="@color/seagreen"></TextView>

            <Spinner
                android:id="@+id/spiLN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Guardar"
            android:textColor="@color/seagreen"
            android:textSize="10dp"></Button>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>