<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="164dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_action_userlogin" />


    <EditText
        android:id="@+id/etEmailRe"
        android:layout_width='match_parent'
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"></EditText>


    <EditText
        android:id="@+id/etPassRe"
        android:layout_width = 'match_parent'
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword">
    </EditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/ButtonLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IniciarSesion"
            android:textSize="10dp"
            android:textColor="@color/seagreen"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/ButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:textSize="10dp"
            android:textColor="@color/seagreen"
            android:layout_gravity="center_horizontal">
        </Button>
    </LinearLayout>



</LinearLayout>